<resources>
    <string name="app_name" translatable="false">BusStop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BusStop</string>
    <string name="nav_header_subtitle" translatable="false">v1.7.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Departures</string>
    <string name="menu_gallery">Description</string>
    <string name="menu_map">Map</string>
    <string name="menu_tickets">Tickets</string>
    <string name="menu_share">Share</string>
    <string name="menu_slideshow">Privacy</string>
    <string name="menu_apps">Other Apps</string>

    <string name="title_activity_settings">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Location</string>
    <string name="sync_header">Sync</string>
    <string name="view_header">View</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Last updated</string>
    <string name="refresh_title">Refresh</string>
    <string name="area_title">Area</string>
    <string name="reply_title">Preferred location</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Hide unplanned</string>
    <string name="departure_title">Departure notification</string>
    <string name="attachment_summary_on">Unplanned journeys will be hidden</string>
    <string name="attachment_summary_off">All journeys will be shown</string>
    <string name="departure_summary">Time to departure will be displayed before</string>

    <string name="updating">Updating schedule, please wait..</string>
    <string name="select_area">Select your area from the list below:</string>
    <string name="minutes" translatable="false">min.</string>
    <string name="via">via</string>
    <string name="route">Route</string>
    <string name="filter">Filter</string>
    <string name="description">A, D - Monday - Friday\nS - School Days\n6 - Saturdays\n7 - Sundays\nC - Weekends and holidays\nF - Vacation</string>
    <string name="see_journey">Go to Map to see journey details</string>
    <string name="share">Scan the code below using the other phone</string>
    <string-array name="share_options">
        <item>Google Play</item>
        <item>APK file</item>
    </string-array>
    <string name="googleplay_url" translatable="false">https://play.google.com/store/apps/details?id=github.wleap.busstop&amp;pcampaignid=app_share</string>
    <string name="apkfile_url" translatable="false">https://github.com/wojtekl/google-play/raw/main/busstop/BusStop/app/release/app-release.apk</string>
    <string name="see_more">See more</string>
    <string name="apps_url" translatable="false">https://play.google.com/store/apps/dev?id=5731012165048810814</string>

    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_url" translatable="false">https://raw.githubusercontent.com/wojtekl/google-play/main/busstop/privacy-policy</string>

    <string name="tickets_url" translatable="false">https://htmlpreview.github.io/?https://github.com/wojtekl/google-play/blob/main/shoppinglist/webapp/index.html</string>

    <string name="ad_app_id" translatable="false">ca-app-pub-4377490341302105~5674485509</string>
    <string name="app_open_ad_unit_id" translatable="false">ca-app-pub-4377490341302105/4956300203</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-4377490341302105/1705636128</string>
</resources>