<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/sync_header">

        <EditTextPreference
            app:key="updated"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true"
            app:enabled="false" />

        <!--<SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />-->

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/messages_header">

        <ListPreference
            app:key="location"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/view_header">

        <SwitchPreferenceCompat
            app:key="unplanned"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

        <SeekBarPreference
            app:key="departure"
            app:title="@string/departure_title"
            app:summary="@string/departure_summary"
            android:max="99"
            app:defaultValue="45"
            app:showSeekBarValue="true" />

    </PreferenceCategory>

</PreferenceScreen>