<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/sharp_airport_shuttle_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_category_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/sharp_map_24"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_privacy_tip_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_apps"
            android:icon="@drawable/sharp_diamond_24"
            android:title="@string/menu_apps" />
    </group>
</menu>